Fix button size on mobile breakpoint

--- a/src/documents/styles/_modules/splash/header.scss
+++ b/src/documents/styles/_modules/splash/header.scss
@@ -272,7 +272,7 @@
                 a.big.button
                 {
                     font-size: 13pt !important;
-                    width: 150px !important;
+                    width: 155px !important;
 
                     &:first-child
                     {
